--- a/assets/css/components/project.scss
+++ b/assets/css/components/project.scss
@@ -6,8 +6,7 @@
 	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fafafa', endColorstr='#e4e4e4',GradientType=0 ); /* IE6-9 */
 }
 .project{
-	// background: $bg-gray;
-	padding: 20px 0px 230px;
+	padding: 20px 0px 8vw;
 	position: relative;
 }
 
@@ -37,6 +36,20 @@
 .sculpture{
 	display: block;
 	margin: 0 auto;
+
+
+	#legs, #legs-dark{
+		transform: translate(0px, 865px)
+	}
+	#hips, #hips-dark{
+		transform: translate(12px, 490px)
+	}
+	#torso, #torso-dark{
+		transform: translate(79px, 177px)
+	}
+	#head, #head-dark{
+		transform: translate(40px, 0px)
+	}
 }
 
 .title__main{
@@ -46,10 +59,10 @@
 
 .project__footer{
 	position: absolute;
-	bottom: 0;
+	bottom: -2px;
 	img{
 		width: 100%;
-		display: block;
+		max-height: 500px;
 	}
 }
 
@@ -91,7 +104,79 @@
 }
 
 
+.project__body{
+	position: relative;
+}
+
+
+.project__navbar{
+	position: absolute;
+	top: 162px;
+	right: -85px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	height: 1110px;
+
+}
+.project__navbar__item{
+	position: relative;
+	&:not(:last-child):after{
+		content: '';
+		position: absolute;
+		width: 1px;
+		height: 253px;
+		top: 65px;
+		left: 23px;
+		background-color: $black;
+	}
+	
+}
+.item-index{
+	transform-origin: 50% 50%;
+	transform: rotate(90deg);
+	font-size: 17px;
+	letter-spacing: 13.33px;
+	cursor: pointer;
+	display: flex;
+	width: 50px;
+	height: 50px;
+	align-items: center;
+	justify-content: center;
+
+	&.active{
+		font-family: 'Rubrica', Arial, sans-serif;
+		font-size: 38px;
+		letter-spacing: 2px;
+	}
+}
+
+
+.--bright-wave{
+	display: block;
+}
+.--dark-wave{
+	display: none;
+}
+
 .--dark{
+
+	.project__navbar__item{
+		&:not(:last-child):after{
+			background-color: $white;
+		}
+		
+	}
+	.item-index{
+		color: $white;		
+	}
+
+	.--bright-wave{
+		display: none;
+	}
+	.--dark-wave{
+		display: block;
+	}
 	.--gray-gradient{
 		background: #1b1b1b; /* Old browsers */
 		background: -moz-linear-gradient(top, #1b1b1b 0%, #030303 100%); /* FF3.6-15 */
@@ -99,15 +184,26 @@
 		background: linear-gradient(to bottom, #1b1b1b 0%,#030303 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1b1b1b', endColorstr='#030303',GradientType=0 ); /* IE6-9 */
 	}
-	.project__footer{
-		display: none;
-	}
 	.sculpture{
-		display: none;
+		// display: none;
 	}
 	.sculpture-dark{
-		display: block;
+		// display: block;
 	}
+	.sculpture__description,
+	.dots,
+	.sculpture__subtitle{
+		fill: $white !important;
+	}
+
+	.line{
+		stroke: $white;
+	}
+
+	#cross{
+		fill: $primary-dark;
+	}
+
 
 	.title__main{
 		fill: $white;
