--- a/components/form.hbs
+++ b/components/form.hbs
@@ -20,27 +20,44 @@
 						<div class="block__title --rubrica">Брендинг</div>
 						<ul class="block__list">
 							<li class="block-list__item md-checkbox">
-									
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> фирменный стиль</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> фирменный стиль</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
 									
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> логотип</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> логотип</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> дизайн</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> дизайн</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
 									
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> брендбук</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> брендбук</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
 									
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> нейминг</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> нейминг</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
 									
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> копирайтинг</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> копирайтинг</span>
+								</label>
 							</li>			
 						</ul>
 					</div>
@@ -49,16 +66,28 @@
 						<div class="block__title --rubrica">ПРОДАКШН</div>
 						<ul class="block__list">
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> интеграции</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> интеграции</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> проморолики</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> проморолики</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> полноценные сюжеты</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> полноценные сюжеты</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> канал под ключ</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> канал под ключ</span>
+								</label>
 							</li>
 						</ul>
 					</div>
@@ -67,13 +96,22 @@
 						<div class="block__title --rubrica">it</div>
 						<ul class="block__list">
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> сайт</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> сайт</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> приложение</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> приложение</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> CRM</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> CRM</span>
+								</label>
 							</li>
 						</ul>
 					</div>
@@ -82,16 +120,28 @@
 						<div class="block__title --rubrica">интернет-маркетинг</div>
 						<ul class="block__list">
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> SMM-продвижение</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> SMM-продвижение</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> SEO-продвижение</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> SEO-продвижение</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> контент-маркетинг</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> контент-маркетинг</span>
+								</label>
 							</li>
 							<li class="block-list__item md-checkbox">
-								<label><input class="checkbox-item" data-price="20" type="checkbox"> контекстная реклама</label>
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="20" type="checkbox">
+									<span> контекстная реклама</span>
+								</label>
 							</li>
 						</ul>
 					</div>
