--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -2,19 +2,17 @@
 <html>
 
 	<head>
-		{{#with first_slide}}
-		<title>{{header}}</title>
-
-
-		
+		{{#with header}}
+		<title>{{header_title}}</title>
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
 		<style type="text/css"></style>
+
+		{{/with}}
 	</head>
 	<body>
 
-		{{/with}}
 		{{!-- intro --}}
 
 
