--- a/components/project.hbs
+++ b/components/project.hbs
@@ -2,9 +2,12 @@
 	<div class="wrapper project__container">
 		<div class="project__title">анатомия вашей компании</div>
 
-			{{>sculpture-img}}
+		{{>sculpture-img}}
 
 	</div>
 
-	<footer class="project__footer"><img src="assets/img/wave.png" alt=""></footer>
+	<footer class="project__footer">
+		<img class="--bright-wave" src="assets/img/wave.png" alt="">
+		<img class="--dark-wave" src="assets/img/wave-dark.png" alt="">		
+	</footer>
 </section>
