--- a/src/scss/components/summary.scss
+++ b/src/scss/components/summary.scss
@@ -227,6 +227,13 @@
 }
 
 @media screen and (max-width: 425px){
+
+
+	.--dark{
+		.summary__container{
+			background-size: auto;
+		}
+	}
 	.summary{
 		padding-top: 47px;
 	}
