--- a/src/scss/components/summary.scss
+++ b/src/scss/components/summary.scss
@@ -170,7 +170,7 @@
 	// text-transform: uppercase;
 }
 .to-bottom-arrows{
-	margin-top: 400px;
+	margin-top: 200px;
 }
 
 .cls-1, .cls-2{
@@ -226,14 +226,15 @@
 
 }
 
-@media screen and (max-width: 425px){
-
-
+@media screen and (max-width: 876px) {
 	.--dark{
 		.summary__container{
 			background-size: auto;
 		}
 	}
+}
+
+@media screen and (max-width: 425px){
 	.summary{
 		padding-top: 47px;
 	}
