--- a/assets/css/components/forms.scss
+++ b/assets/css/components/forms.scss
@@ -11,10 +11,10 @@
 	margin-bottom: 30px;
 }
 .forms__subtitle{
-	font-size: 8px;
+	font-size: 10px;
+	line-height: 1.7;
 	letter-spacing: 4.27px;
 	text-transform: uppercase;
-	line-height: 10.54px;
 	font-weight: 400;
 	margin: 35px 0px;
 }
@@ -59,7 +59,7 @@
 		width: 46px;
 		background-position: left;
 	}
-	&.--im{
+	&.--marketing{
 		width: 45px;
 		background-position-x: right;
 	}
@@ -199,7 +199,7 @@
 			width: 46px;
 			background-position: -539px;
 		}
-		&.--im{
+		&.--marketing{
 			width: 45px;
 			background-position-x: right;
 		}
@@ -220,8 +220,8 @@
 	.forms__subtitle{
 		margin: 20px;
 		font-size: 10px;
-		line-height: 1.3;
 		letter-spacing: 0.1rem;
+		margin: 25px 0px 15px;
 	}
 	.inputs{
 		margin-top: 0;
@@ -242,10 +242,6 @@
 		margin: 20px 0 15px;
 		width: 100%;
 	}
-	
-	.forms__subtitle{
-		margin: 25px 0px 15px;
-	}
 	.block__img{
 		width: 38px;
 		height: 35px;
@@ -264,7 +260,7 @@
 			width: 28px !important;
 			background-position: left;
 		}
-		&.--im{
+		&.--marketing{
 			width: 28px !important;
 			background-position-x: right;
 			margin-top: 23px;
@@ -296,7 +292,7 @@
 			&.--it{
 				background-position: -325px;
 			}
-			&.--im{
+			&.--marketing{
 				background-position-x: right;
 			}
 		}
