--- a/components/form.hbs
+++ b/components/form.hbs
@@ -1,8 +1,8 @@
 <section id="forms-block" class="forms">
+	{{#with forms}}
 	<div class="forms__container wrapper">
-		<h1 class="forms__title --rubrica">начать проект</h1>
-		<h3 class="forms__subtitle">Спасибо за проявленный интерес к нашей работе. 
-			<br>Пожалуйста, заполните форму ниже, и мы свяжемся с вами для уточнения деталей в течение одного рабочего дня.</h3>
+		<h1 class="forms__title --rubrica">{{title}}</h1>
+		<h3 class="forms__subtitle">{{subtitle}}</h3>
 
 		<form action="" class="forms__inputs">
 			<div class="inputs">
@@ -13,141 +13,31 @@
 			</div>
 
 			<div class="forms__checkboxes">
-				<div class="checkboxes__title forms__subtitle">отметьте необходимое</div>
-				<div class="checkboxes__blocks">
-					<div class="checkboxes__block">
-						<div class="block__img --branding"></div>
-						<div class="block__title --rubrica">Брендинг</div>
-						<ul class="block__list">
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> фирменный стиль</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-									
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> логотип</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> дизайн</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-									
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> брендбук</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-									
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> нейминг</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-									
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> копирайтинг</span>
-								</label>
-							</li>			
-						</ul>
-					</div>
-					<div class="checkboxes__block">
-						<div class="block__img --prodaction"></div>
-						<div class="block__title --rubrica">ПРОДАКШН</div>
-						<ul class="block__list">
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> интеграции</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> проморолики</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> полноценные сюжеты</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> канал под ключ</span>
-								</label>
-							</li>
-						</ul>
-					</div>
-					<div class="checkboxes__block">
-						<div class="block__img --it"></div>
-						<div class="block__title --rubrica">it</div>
-						<ul class="block__list">
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> сайт</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> приложение</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> CRM</span>
-								</label>
-							</li>
-						</ul>
-					</div>
-					<div class="checkboxes__block">
-						<div class="block__img --im"></div>
-						<div class="block__title --rubrica">интернет-маркетинг</div>
-						<ul class="block__list">
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> SMM-продвижение</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> SEO-продвижение</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> контент-маркетинг</span>
-								</label>
-							</li>
-							<li class="block-list__item md-checkbox">
-								<label class="pure-material-checkbox">
-									<input class="checkbox-item" data-price="20" type="checkbox">
-									<span> контекстная реклама</span>
-								</label>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
 
+				<div class="checkboxes__title forms__subtitle">отметьте необходимое</div>
+
+				<div class="checkboxes__blocks">
+					{{#each items}}
+					<div class="checkboxes__block">
+						<div class="block__img --{{id}}"></div>
+						<div class="block__title --rubrica">{{name}}</div>
+						<ul class="block__list">
+							{{#each subitems}}
+							<li class="block-list__item md-checkbox">
+								<label class="pure-material-checkbox">
+									<input class="checkbox-item" data-price="{{price}}" type="checkbox">
+									<span> {{name}}</span>
+								</label>
+							</li>
+							{{/each}}		
+						</ul>
+					</div>
+					{{/each}}
+				</div>
+
+
+			</div>
+			
 			<div class="forms__progressbar">
 				<div class="forms__subtitle progressbar__title">примерный бюджет</div>
 				<div class="progressbar wrapper">
@@ -167,4 +57,6 @@
 		</form>
 
 	</div>
+
+	{{/with}}
 </section>
