--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -1,6 +1,12 @@
 <section class="banner">
 	{{>header}}
 
+	<div class="banner__popup">
+		<div class="popup__container">
+			<video autoplay src="assets/img/popup.mp4"></video>
+		</div>
+	</div>
+
 	 <div class="banner__wrapper wrapper">
 	 	<div class="banner__title">
 	 		<h1 class="--rubrica-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ <span class="switcher"><img src="assets/img/switcher.png" alt="switcher"></span></h1>
