--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -2,8 +2,9 @@
 	{{>header}}
 
 	<div class="banner__popup">
+		<button class="close-btn"><img src="assets/img/close-button.svg"></button>
 		<div class="popup__container">
-			<video autoplay src="assets/img/popup.mp4"></video>
+			<video id="popup-video" autoplay src="assets/img/popup.mp4"></video>
 		</div>
 	</div>
 
