--- a/components/video.hbs
+++ b/components/video.hbs
@@ -1,8 +1,11 @@
 <section id="video" class="video-sect">
 	<div data-aos="fade-right" class="video-sect__container">
 		<div class="video-sect__hand">
+			<div class="img__phone">				
+				<div class="video-container"><video controls src="assets/img/promo.mp4"></video></div>
+				<img src="assets/img/hand/phone.png" alt="phone">
+			</div>
 			<div class="img__hand"></div>
-			<img src="assets/img/hand/phone.png" alt="phone" class="img__phone">
 		</div>
 	</div>
 	<div data-aos="fade-right" class="wrapper video-sect__logo">
