--- a/assets/css/components/video.scss
+++ b/assets/css/components/video.scss
@@ -11,6 +11,30 @@
 	// transform: scale(1.34);
 	.img__phone{
 		width: 40.58vw;
+		position: relative;
+		img{
+			width: 100%;
+			display: block;
+			position: relative;
+		}
+		
+		.video-container{
+		    width: 36.7vw;
+			height: 17.1vw;
+			position: absolute;
+			top: 2.1vw;
+			left: 2.3vw;
+			overflow: hidden;
+			border-radius: 1.7vw;
+		}
+		video{
+			width: 100%;
+			position: absolute;
+			top: 50%;
+			left: 0;
+			transform: translateY(-50%);
+		}
+
 	}
 
 	.img__hand{
@@ -48,6 +72,13 @@
 	.video-sect__hand{
 		.img__phone{
 			width: 780px;
+			.video-container{
+				width: 707px;
+				height: 330px;
+				top: 40px;
+				left: 43px;
+				border-radius: 35px;
+			}
 		}
 
 		.img__hand{
