--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -4,7 +4,7 @@
 	<div class="banner__popup">
 		<button class="close-btn"><img src="assets/img/close-button.svg"></button>
 		<div class="popup__container">
-			<video id="popup-video" autoplay src="assets/img/popup.mp4"></video>
+			<video id="popup-video" autoplay="" src="assets/img/popup.mp4"></video>
 		</div>
 	</div>
 
