--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -4,6 +4,7 @@
 	<head>
 		{{#with header}}
 		<title>{{header_title}}</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
