favicon & some fields

--- a/components/header.hbs
+++ b/components/header.hbs
@@ -30,7 +30,7 @@
 			</svg>
 		</a></div>
 		<div data-aos="fade-down" data-aos-delay="200" class="header__spacer">
-			<a href="#forms-block" class="spacer__text">{{to_form_btn}}</a>
+			<a href="#forms-block" class="spacer__text">хочу шедевр</a>
 		</div>
 		<div data-aos="fade-down" data-aos-delay="400" class="header__links">
 			<div class="header__shower-btn">
