--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -5,12 +5,32 @@
 		{{#with header}}
 		<title>{{header_title}}</title>
 		<meta charset="UTF-8">
+		<meta name="description" content="{{description}}" />
+		<meta name="keywords" content="{{keywords}}" />
+		<meta property="og:title" content="{{header_title}}" />
+		<meta property="og:type" content="{{type}}" />
+		<meta property="og:url" content="{{url}}" />
+		<meta property="og:image" content="{{image}}" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
+		<meta name="msapplication-TileColor" content="#da532c">
+		<meta name="theme-color" content="#ffffff">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png">
+		<link rel="manifest" href="/icons/site.webmanifest">
 		<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 		<link rel="stylesheet" href="/assets/css/style.css">
 		<link href="https://fonts.googleapis.com/css?family=Lato:100,200" rel="stylesheet">
 		<style type="text/css"></style>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135633048-1"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-135633048-1');
+		</script>
 
 		{{/with}}
 	</head>
