--- a/components/video.hbs
+++ b/components/video.hbs
@@ -2,7 +2,7 @@
 	<div data-aos="fade-right" class="video-sect__container">
 		<div class="video-sect__hand">
 			<div class="img__phone">				
-				<div class="video-container"><video controls src="assets/img/promo.mp4"></video></div>
+				<div class="video-container"><video id="promovideo" controls="false" src="assets/img/promo.mp4"></video></div>
 				<img src="assets/img/hand/phone.png" alt="phone">
 			</div>
 			<div class="img__hand"></div>
