--- a/assets/css/components/banner.scss
+++ b/assets/css/components/banner.scss
@@ -14,13 +14,20 @@
 }
 
 
+@keyframes fade-in {
+	0% { opacity: 0; }
+	100% { opacity: 1; }
+}
+
 .close-btn{
 	position: absolute;
 	top: 50px;
 	right: 50px;
 	border: none;
 	background: none;
-
+	opacity: 0;
+	animation: fade-in 0.2s ease-in-out;
+	animation-delay: 4s;
 	img{
 		width: 30px;
 	}
