--- a/assets/css/components/banner.scss
+++ b/assets/css/components/banner.scss
@@ -25,8 +25,7 @@
 	right: 50px;
 	border: none;
 	background: none;
-	opacity: 0;
-	animation: fade-in 0.2s ease-in-out;
+	display: none;
 	animation-delay: 4s;
 	img{
 		width: 30px;
