--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -7,6 +7,7 @@
 			<video id="popup-video" preload="auto" autoplay="true" muted="muted" playsInline>
 				<source type="video/mp4" src="assets/img/popup.mp4"></source>
 			</video>
+			<video id="popup-video-mob" src="../assets/img/popup-mob.mp4" autoplay="true" muted="muted" playsInline></video>
 		</div>
 	</div>
 
@@ -26,9 +27,9 @@
 	 	<div class="toform-btn__btn"><a href="#forms-block">хочу шедевр</a></div>
 	 	<p class="banner__mob-text">Когда-то давно Микеланджело
 			<br/>вооружился инструментами
-			<br/>и создал из глыбы мрамора 
-			<br/>произведение искусства — «Давида». 
-			<br/>Скульптор даже пренебрег логикой и 
+			<br/>и создал из глыбы мрамора
+			<br/>произведение искусства — «Давида».
+			<br/>Скульптор даже пренебрег логикой и
 			<br/>исказил пропорции человеческого тела,
 			<br/>чтобы достичь большей художественной
 			<br/>выразительности.</p>
