--- a/components/form.hbs
+++ b/components/form.hbs
@@ -29,7 +29,7 @@
 									<span> {{name}}</span>
 								</label>
 							</li>
-							{{/each}}		
+							{{/each}}
 						</ul>
 					</div>
 					{{/each}}
@@ -37,13 +37,13 @@
 
 
 			</div>
-			
+
 			<div class="forms__progressbar">
 				<div class="forms__subtitle progressbar__title">примерный бюджет</div>
 				<div class="progressbar wrapper">
 					<div class="progressfill"></div>
 				</div>
-				<p class="wrapper progressbar__amount">0$</p>
+				<p class="wrapper progressbar__amount">0&#8381;</p>
 			</div>
 
 			<div class="forms__textarea">
