--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -13,7 +13,12 @@
 
 	 <div class="banner__wrapper wrapper">
 	 	<div class="banner__title">
-	 		<h1 class="--rubrica-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ <span class="switcher"><img src="assets/img/switcher.png" alt="switcher"></span></h1>
+	 		<h1 class="--rubrica-title">
+				<span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ
+				<span class="switcher">
+					<img src="assets/img/switcher.png" alt="switcher">
+				</span>
+			</h1>
 	 		<h4 class="--avente-subtitle-big">А ЭМОЦИИ СОЗДАЕМ <a href="#summary" class="--primary-color">МЫ</a></h4>
 	 	</div>
 	 	<div class="banner__head">
