--- a/assets/css/components/footer.scss
+++ b/assets/css/components/footer.scss
@@ -1,8 +1,6 @@
 .footer{
 	background-color: $bg-gray;
-
 }
-
 .mail-link{
 	color: $black;
 	text-decoration: none;
@@ -10,6 +8,13 @@
 	text-transform: uppercase;
 	letter-spacing: 6.2px;
 
+}
+.footer__mail{
+	flex-direction: column;
+
+	div{
+		margin: 5px;
+	}
 }
 
 .footer__container{
