--- a/components/footer.hbs
+++ b/components/footer.hbs
@@ -2,7 +2,8 @@
 	{{#with header}}
 	<div class="footer__container wrapper">
 		<div class="footer__item footer__mail">
-			<a href="mailto:{{email}}" class="mail-link">{{email}}</a>
+			<div><a href="mailto:{{email}}" class="mail-link">{{email}}</a></div>
+			<div><a href="tel:{{phone}}" class="mail-link">{{phone}}</a></div>
 		</div>
 		<div class="footer__item footer__logo"><a href="">
 			<svg width="126px" height="53px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 528.99 222.14">
