--- a/components/banner.hbs
+++ b/components/banner.hbs
@@ -14,7 +14,8 @@
 	 <div class="banner__wrapper wrapper">
 	 	<div class="banner__title">
 	 		<h1 class="--rubrica-title">
-				<span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ
+				<span class="bright-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>ШЕДЕВР<br/>СОЗДАЮТ<br/>ЭМОЦИИ</span>
+				<span class="dark-title"><span class="--italic">ПЛЕВАТЬ<br/>НА ЛОГИКУ</span><br/>МИРОМ<br/>ПРАВЯТ<br/>ЭМОЦИИ</span>
 				<span class="switcher">
 					<img src="assets/img/switcher.png" alt="switcher">
 				</span>
