--- a/components/form.hbs
+++ b/components/form.hbs
@@ -4,12 +4,12 @@
 		<h1 class="forms__title --rubrica">{{title}}</h1>
 		<h3 class="forms__subtitle">{{subtitle}}</h3>
 
-		<form action="" class="forms__inputs">
+		<form  class="forms__inputs">
 			<div class="inputs">
-				<input id="user-name" class="inputs__input form-input" placeholder="имя" type="text">
-				<input id="user-email" class="inputs__input form-input" placeholder="E-mail" type="email">
-				<input id="phone" class="inputs__input form-input" placeholder="номер телефона" type="tel">
-				<input id="company-name" class="inputs__input form-input" placeholder="название компании" type="text">
+				<input required id="user-name" class="inputs__input form-input" placeholder="имя" type="text">
+				<input required id="user-email" class="inputs__input form-input" placeholder="E-mail" type="email">
+				<input required id="phone" class="inputs__input form-input" placeholder="номер телефона" type="tel">
+				<input required id="company-name" class="inputs__input form-input" placeholder="название компании" type="text">
 			</div>
 
 			<div class="forms__checkboxes">
