--- a/components/video.hbs
+++ b/components/video.hbs
@@ -2,15 +2,20 @@
 	<div data-aos="fade-right" class="video-sect__container">
 		<div class="video-sect__hand">
 			<div class="img__phone">
-				<div class="video-container"><video id="promovideo" src="assets/img/promo.mp4"></video></div>
+
+				<div class="video-container">
+					<!-- <video id="promovideo" src="https://youtu.be/k9SKe2iYdNU"></video> -->
+					<iframe class="yt-video" src="https://www.youtube.com/embed/k9SKe2iYdNU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+				</div>
 				<img src="assets/img/hand/phone.png" alt="phone">
-				<div class="play-btn"><img src="assets/img/play-button.svg" alt="play-btn"></div>
+				<!-- <div class="play-btn"><img src="assets/img/play-button.svg" alt="play-btn"></div>
+				<div class="fullscreen-btn"><img src="assets/img/switch-to-full-screen-button.svg" alt="fullscreen"></div> -->
 			</div>
 			<div class="img__hand"></div>
 		</div>
 	</div>
 	<div class="video-sect__container-mob">
-		<video id="promovideo-mob" controls src="assets/img/promo.mp4">
+		<iframe class="yt-video-mob" src="https://www.youtube.com/embed/k9SKe2iYdNU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</div>
 	<div data-aos="fade-right" class="wrapper video-sect__logo">
 		<?xml version="1.0" encoding="UTF-8"?>
