--- a/components/footer.hbs
+++ b/components/footer.hbs
@@ -34,7 +34,7 @@
 		</a></div>
 		<div class="footer__item footer__links">
 			{{#each media_links}}
-			<a href="{{link}}" class="links__item --{{name}}"></a>
+			<a target="_blank" href="{{link}}" class="links__item --{{name}}"></a>
 			{{/each}}
 		</div>
 	</div>
