--- a/assets/css/components/video.scss
+++ b/assets/css/components/video.scss
@@ -50,32 +50,13 @@
 
 }
 .play-btn{
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	z-index: 5;
-	cursor: pointer;
+	width: 150px;
+	height: auto;
 
-	img{
-		width: 80px !important;
-		opacity: 0.8;
+	path{
+		fill: $primary;
 	}
 }
-
-.fullscreen-btn{
-	position: absolute;
-	bottom: 50px;
-	right: 60px;
-	z-index: 5;
-	cursor: pointer;
-
-	img{
-		opacity: 0.8;
-		width: 25px !important;
-	}
-}
-
 .yt-video{
 	width: 100%;
 	height: 100%;
@@ -90,10 +71,10 @@
 
 .video-sect__container-mob{
 	display: none;
+	text-align: center;
 
-	video{
-		width: 100%;
-
+	a{
+		text-decoration: none;
 	}
 }
 
@@ -110,6 +91,13 @@
 	}
 	#logo-mid__icon{
 		fill: $primary-dark;
+	}
+
+	.play-btn{
+
+		path{
+			fill: $primary-dark;
+		}
 	}
 
 }
