--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -7,6 +7,7 @@
 		<meta charset="UTF-8">
 		<meta name="description" content="{{description}}" />
 		<meta name="keywords" content="{{keywords}}" />
+		<meta name="mailru-verification" content="c2a86d8ea173480f" />
 		<meta property="og:title" content="{{header_title}}" />
 		<meta property="og:type" content="{{type}}" />
 		<meta property="og:url" content="{{url}}" />
