--- a/components/form.hbs
+++ b/components/form.hbs
@@ -52,7 +52,7 @@
 			</div>
 
 			<div class="submit">
-				<input class="submit__btn" value="отправить" type="submit">
+				<input disabled class="submit__btn" value="отправить" type="submit">
 			</div>
 		</form>
 
