--- a/assets/css/components/banner.scss
+++ b/assets/css/components/banner.scss
@@ -26,7 +26,7 @@
 	border: none;
 	background: none;
 	display: none;
-	animation-delay: 4s;
+	z-index: 5;
 	img{
 		width: 30px;
 	}
@@ -163,7 +163,7 @@
 		display: none;
 	}
 	.dark-title{
-		display: inline;	
+		display: inline;
 	}
 	color: $white;
 	.banner{
