--- a/pages/index.hbs
+++ b/pages/index.hbs
@@ -63,7 +63,7 @@
 
 			<div class="coockies-alert">
 				<div class="coockies-alert__container">
-					<p>ПРОДОЛЖАЯ ПРОСМАТРИВАТЬ НАШ САЙТ, ВЫ ДАЕТЕ СОГЛАСИЕ НА ИСПОЛЬЗОВАНИЕ ФАЙЛОВ COOKIE И ОБРАБОТКУ ПОЛЬЗОВАТЕЛЬСКИХ ДАННЫХ В ЦЕЛЯХ ЕГО ФУНКЦИОНИРОВАНИЯ. ВЫ ДОЛЖНЫ ПОКИНУТЬ САЙТ, ЕСЛИ НЕ ХОТИТЕ, ЧТОБЫ ВАШИ ДАННЫЕ ОБРАБАТЫВАЛИСЬ.</p>
+					<p>ПРОДОЛЖАЯ ПРОСМАТРИВАТЬ НАШ САЙТ, ВЫ ДАЕТЕ СОГЛАСИЕ НА ИСПОЛЬЗОВАНИЕ ФАЙЛОВ COOKIE И ОБРАБОТКУ ПОЛЬЗОВАТЕЛЬСКИХ ДАННЫХ В ЦЕЛЯХ ЕГО ФУНКЦИОНИРОВАНИЯ. <br>ВЫ ДОЛЖНЫ ПОКИНУТЬ САЙТ, ЕСЛИ НЕ ХОТИТЕ, ЧТОБЫ ВАШИ ДАННЫЕ ОБРАБАТЫВАЛИСЬ.</p>
 					<div class="close-coockies-alert-btn">
 						<?xml version="1.0" encoding="iso-8859-1"?>
 						<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
